<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberDisp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="#DAC5EB"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Siete"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/seven"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Ocho"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/eight"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/nine"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="allClear"
            android:text="@string/allClear"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="264dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/four"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/five"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/six"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="operatorSmash"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="328dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/two"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/three"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="operatorSmash"
            android:text="@string/multi"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#9D71B3"
            android:onClick="numberSmash"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="operatorSmash"
            android:text="@string/add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

        <Button
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="operatorSmash"
            android:text="@string/sub"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#C467E0"
            android:onClick="equalSmash"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>